language/move-lang/tests/move_check/typing/pack_reference.exp
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/pack_reference.move:5:9
  │
4 │     fun t0(r_imm: &u64, r_mut: &mut u64) {
  │                   ---- Expected a single non-reference type, but found: '&u64'
5 │         Box { f: r_imm };
  │         ^^^^^^^^^^^^^^^^ Invalid type argument

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/pack_reference.move:6:9
  │
4 │     fun t0(r_imm: &u64, r_mut: &mut u64) {
  │                                -------- Expected a single non-reference type, but found: '&mut u64'
5 │         Box { f: r_imm };
6 │         Box { f: r_mut };
  │         ^^^^^^^^^^^^^^^^ Invalid type argument

